# teraflopai-rs

./: Cargo.toml  README.md
examples/: embeddings.rs  search.rs  segment.rs
src/: lib.rs
