[package]
name = "teraflopai"
version = "0.1.11"
edition = "2024"
description = "Official Rust library for the TeraflopAI API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/you/teraflopai-rs"
readme = "README.md"
exclude = [".env", ".env.*"]

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
